# EL_Postgres_BigQuery

./: README.md  pyproject.toml
config/: db_config.py
