[tool.poetry]
name = "chesf"
version = "0.1.0"
description = ""
authors = ["Luciano Borba <luhborbafilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
taskipy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"
sqlalchemy = "^2.0.36"
google-cloud-bigquery = "^3.26.0"
google-auth = "^2.35.0"
google-cloud-core = "^2.4.1"
psycopg2-binary = "^2.9.10"
pydocstyle = "^6.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
